<resources>
    <string name="app_name">Mahjong Calculator</string>
    <string name="title_activity_camera">cameraActivity</string>
    <string name="camera_agari">アガリ牌</string>
    <string name="camera_menzen">面前牌（暗槓含まず）</string>
    <string name="camera_naki">チー、ポン、暗カン、明カン</string>
    <string name="button_shutter">撮影</string>
    <string name="button_text_off">テキスト表示</string>
    <string name="button_text_on">テキスト非表示</string>
    <string name="sending">送信中</string>
    <string name="title_send_alert">手牌判定</string>
    <string name="cancel">キャンセル</string>
    <string name="title_activity_camera2">CameraActivity2</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="action_settings">Settings</string>
    <string name="agari">アガリ</string>
    <string name="east">東</string>
    <string name="south">南</string>
    <string name="west">西</string>
    <string name="north">北</string>
    <string name="field">場風</string>
    <string name="me">自風</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
